2009-04-15 Ned Ludd  <solar@gentoo.org>
	* gpe-base/libgpewidget: pixmaps.c gpe/pixmaps.h 
	* Icon Dir Unification. /usr/share/gpe/pixmaps/ -> /usr/share/pixmaps/gpe/
	* Targeted for gpe-3.0 release.

2009-01-21  Graham Cobb  <g+770@cobb.uk.net>

	* debian/control (Depends): Add ${misc:Depends} (dh compat level 4)

	* debian/rules: Remove debhelper compatability 3

	* debian/compat: Add file to specify compatability level 4

2008-09-06  Phil Blundell  <pb@reciva.com>

	* po/da.po: Update from TP.

2008-08-13  Phil Blundell  <pb@reciva.com>

	* configure.ac (ALL_LINGUAS): Auto-detect all PO files.
	* po/ga.po, po/sv.po, po/ja.po, po/zh_CN.po: Update from TP.
	* mkinstalldirs: Remove from version control.

2008-07-11 Florian Boor <florian@kernelconcepts.de>

	* Release 0.117
	* Makefile.am: package pot file

2008-05-19 Florian Boor <florian@kernelconcepts.de>

	* Release 0.116

2008-05-19  Florian Boor <florian@kernelconcepts.de>

	* gpeclockface.c: Use new Cairo API in GDK. Fixes #73

2008-05-13  Florian Boor <florian@kernelconcepts.de>

	* gpe-tp.am: Switch to new translation code.
	* confgure.ac: Add several new translations.
	* po/*: Major translations update. 
	* colorrenderer.c: Add sanity check to avoid potential segfault.

2008-01-15  Graham Cobb  <g+770@cobb.uk.net>

	* gtkdatecombo.c: On chinook use HildonCalendar instead of GtkCalendar

2007-11-05  Graham Cobb  <g+770@cobb.uk.net>

	* configure.ac, Makefile.am: Changes for Chinook

2007-07-18  Graham Cobb  <g+770@cobb.uk.net>

	* debian/libgpewidget1.files: add etc so that Maemo backup
	configuration is included.  Note that if --prefix=/usr is
	specified in ./configure command, --sysconfdir=/etc must also be
	specified.

2007-03-28  Florian Boor <florian@kernelconcepts.de>

    * Release 0.115
    * Some minor fixes

2006-12-29  Philippe De Swert <philippedeswert@scarlet.be>
    * colordialog.c : remove unused function
    * pixmaps.c : fix warnings

2006-12-28  Neal H. Walfield  <neal@gnu.org>