@@ -1,0 +1,6 @@
+<backup-configuration>
+  <locations>
+    <location type="dir"
+              category="comm_and_cal" auto="true">/home/user/.gpe</location>
+  </locations>
+</backup-configuration>
